# shifttracker

./: .env.example  .gitignore  DEMO.md  Dockerfile  README.md  alembic.ini  deploy.sh  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-google-sheets-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-admin-interface/: 03-01-PLAN.md  (+10 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
shifttracker/: app.py  config.py  main.py
shifttracker/admin/: auth.py  deps.py  router.py
shifttracker/bot/: middleware.py  router.py
shifttracker/db/: engine.py  models.py
shifttracker/pipeline/: models.py  queue.py  worker.py
shifttracker/sheets/: __init__.py  cell_resolve.py  client.py  header_cache.py  writer.py
shifttracker/templates/: base.html  login.html
tests/: conftest.py  test_admin_auth.py  test_admin_crud.py  test_admin_review.py  test_admin_shifts.py  test_admin_smoke.py  test_bot_handlers.py  test_cell_resolve.py  test_dedup.py  test_header_cache.py  test_identification.py  test_models.py  test_pipeline.py  test_sheets_writer.py  test_shift_date.py
(+25 files in other folders)
