[project]
name = "shifttracker"
version = "0.1.0"
description = "Telegram bot for automated shift tracking with Google Sheets integration"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.27.0",
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "gspread==6.2.1",
    "google-auth>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=0.5",
    "aiosqlite>=0.20",
    "tzdata>=2024.1",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 10

[tool.ruff]
line-length = 120
